[gd_scene load_steps=3 format=3 uid="uid://cq5bpd73x6aat"]

[ext_resource type="Script" path="res://src/entities/card_button.gd" id="1_gr8h2"]
[ext_resource type="PackedScene" uid="uid://cirbwe5iypvc4" path="res://src/entities/card_description.tscn" id="2_rtikf"]

[node name="CardButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_gr8h2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="InnerTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FrameTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CardDescription" parent="." instance=ExtResource("2_rtikf")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="CardDescription" to="." method="_on_card_description_mouse_exited"]
